# what flags you want to pass to the C compiler & linker
AM_CFLAGS = -Wall
#LDFLAGS =

# this lists the binaries to produce, the (non-PHONY, binary) targets in
# the previous manual Makefile
# INCLUDES = -I@top_srcdir@/include
bin_PROGRAMS = arping
arping_SOURCES = arp.c chain.c frame.c netdev.c ping.c receiver.c \
		 arp.h chain.h frame.h netdev.h

